# macro_dashboard_acm

./: README.md  TODO.md
backend/: .gitignore  Cargo.toml
backend/src/: main.rs  routes.rs
backend/src/handlers/: inflation.rs  long_term.rs  mod.rs  real_yield.rs  tbill.rs
backend/src/services/: bls.rs  mod.rs  treasury.rs  treasury_long.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: Inflation.js  LongTermRates.js  MacroDashboard.js  RealYield.js  TBill.js
