[package]
name = "macro_dashboard_acm"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
scraper = "0.13"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10.2"
chrono = "0.4"
csv = "1.1"
idna = "0.5.0"